--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,320 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@ARTICLE{10756642,
+  author={Wang, Chenxing and Zhao, Fang and Luo, Haiyong and Fang, Yuchen and Zhang, Haichao and Xiong, Haoyu},
+  journal={IEEE Transactions on Mobile Computing}, 
+  title={Towards Effective Transportation Mode-Aware Trajectory Recovery: Heterogeneity, Personalization and Efficiency}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-15},
+  keywords={Location-based social networks;spatio-temporal data mining;transportation mode-aware trajectory recovery},
+  doi={10.1109/TMC.2024.3501280}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+
+@article{DBLP:journals/iotj/QinTFLZW24,
+  author       = {Yanjun Qin and
+                  Xiaoming Tao and
+                  Yuchen Fang and
+                  Haiyong Luo and
+                  Fang Zhao and
+                  Chenxing Wang},
+  title        = {{DMGSTCN:} Dynamic Multigraph Spatio-Temporal Convolution Network
+                  for Traffic Forecasting},
+  journal      = {{IEEE} Internet Things J.},
+  volume       = {11},
+  number       = {12},
+  pages        = {22208--22219},
+  year         = {2024},
+  url          = {https://doi.org/10.1109/JIOT.2024.3380746},
+  doi          = {10.1109/JIOT.2024.3380746},
+  timestamp    = {Mon, 16 Sep 2024 19:30:57 +0200},
+  biburl       = {https://dblp.org/rec/journals/iotj/QinTFLZW24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{DBLP:journals/iotj/LuoCZLWYLM24,
+  author       = {Dan Luo and
+                  Zijian Cao and
+                  Dong Zhao and
+                  Zicheng Lin and
+                  Chenxing Wang and
+                  Haitao Yuan and
+                  Liang Liu and
+                  Huadong Ma},
+  title        = {OD-Prophet: Toward Efficiently Predicting Individual Origin-Destination
+                  Travel Demand in Location-Based Services},
+  journal      = {{IEEE} Internet Things J.},
+  volume       = {11},
+  number       = {14},
+  pages        = {25010--25023},
+  year         = {2024},
+  url          = {https://doi.org/10.1109/JIOT.2024.3391915},
+  doi          = {10.1109/JIOT.2024.3391915},
+  timestamp    = {Fri, 02 Aug 2024 21:40:18 +0200},
+  biburl       = {https://dblp.org/rec/journals/iotj/LuoCZLWYLM24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{DBLP:journals/tits/ZhangZWLXF24,
+  author       = {Haichao Zhang and
+                  Fang Zhao and
+                  Chenxing Wang and
+                  Haiyong Luo and
+                  Haoyu Xiong and
+                  Yuchen Fang},
+  title        = {Knowledge Distillation for Travel Time Estimation},
+  journal      = {{IEEE} Trans. Intell. Transp. Syst.},
+  volume       = {25},
+  number       = {8},
+  pages        = {9631--9642},
+  year         = {2024},
+  url          = {https://doi.org/10.1109/TITS.2024.3374325},
+  doi          = {10.1109/TITS.2024.3374325},
+  timestamp    = {Thu, 22 Aug 2024 20:23:58 +0200},
+  biburl       = {https://dblp.org/rec/journals/tits/ZhangZWLXF24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@inproceedings{DBLP:conf/cikm/000124,
+  author       = {Chenxing Wang},
+  editor       = {Edoardo Serra and
+                  Francesca Spezzano},
+  title        = {Towards Effective Fusion and Forecasting of Multimodal Spatio-temporal
+                  Data for Smart Mobility},
+  booktitle    = {Proceedings of the 33rd {ACM} International Conference on Information
+                  and Knowledge Management, {CIKM} 2024, Boise, ID, USA, October 21-25,
+                  2024},
+  pages        = {5483--5486},
+  publisher    = {{ACM}},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3627673.3680261},
+  doi          = {10.1145/3627673.3680261},
+  timestamp    = {Thu, 14 Nov 2024 13:43:22 +0100},
+  biburl       = {https://dblp.org/rec/conf/cikm/000124.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{DBLP:conf/icann/WangZLFZX24,
+  author       = {Chenxing Wang and
+                  Fang Zhao and
+                  Haiyong Luo and
+                  Yuchen Fang and
+                  Haichao Zhang and
+                  Haoyu Xiong},
+  editor       = {Michael Wand and
+                  Krist{\'{\i}}na Malinovsk{\'{a}} and
+                  J{\"{u}}rgen Schmidhuber and
+                  Igor V. Tetko},
+  title        = {Vehicle-Based Evolutionary Travel Time Estimation with Deep Meta Learning},
+  booktitle    = {Artificial Neural Networks and Machine Learning - {ICANN} 2024 - 33rd
+                  International Conference on Artificial Neural Networks, Lugano, Switzerland,
+                  September 17-20, 2024, Proceedings, Part {IX}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {15024},
+  pages        = {246--262},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-72356-8\_17},
+  doi          = {10.1007/978-3-031-72356-8\_17},
+  timestamp    = {Sun, 29 Sep 2024 21:17:22 +0200},
+  biburl       = {https://dblp.org/rec/conf/icann/WangZLFZX24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{DBLP:journals/isci/QinL0FT023,
+  author       = {Yanjun Qin and
+                  Haiyong Luo and
+                  Fang Zhao and
+                  Yuchen Fang and
+                  Xiaoming Tao and
+                  Chenxing Wang},
+  title        = {Spatio-temporal hierarchical {MLP} network for traffic forecasting},
+  journal      = {Inf. Sci.},
+  volume       = {632},
+  pages        = {543--554},
+  year         = {2023},
+  url          = {https://doi.org/10.1016/j.ins.2023.03.063},
+  doi          = {10.1016/J.INS.2023.03.063},
+  timestamp    = {Mon, 16 Sep 2024 19:30:55 +0200},
+  biburl       = {https://dblp.org/rec/journals/isci/QinL0FT023.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{DBLP:conf/cniot/Wang0L023,
+  author       = {Yueyue Wang and
+                  Chenxing Wang and
+                  Haiyong Luo and
+                  Fang Zhao},
+  title        = {DrivCapsNet: {A} Driving Style Detection Algorithm Based on Capsule
+                  Network},
+  booktitle    = {Proceedings of the 2023 4th International Conference on Computing,
+                  Networks and Internet of Things, {CNIOT} 2023, Xiamen, China, May
+                  26-28, 2023},
+  pages        = {157--163},
+  publisher    = {{ACM}},
+  year         = {2023},
+  url          = {https://doi.org/10.1145/3603781.3603808},
+  doi          = {10.1145/3603781.3603808},
+  timestamp    = {Sat, 05 Aug 2023 00:01:51 +0200},
+  biburl       = {https://dblp.org/rec/conf/cniot/Wang0L023.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{DBLP:conf/icde/FangQL0XZ023,
+  author       = {Yuchen Fang and
+                  Yanjun Qin and
+                  Haiyong Luo and
+                  Fang Zhao and
+                  Bingbing Xu and
+                  Liang Zeng and
+                  Chenxing Wang},
+  title        = {When Spatio-Temporal Meet Wavelets: Disentangled Traffic Forecasting
+                  via Efficient Spectral Graph Attention Networks},
+  booktitle    = {39th {IEEE} International Conference on Data Engineering, {ICDE} 2023,
+                  Anaheim, CA, USA, April 3-7, 2023},
+  pages        = {517--529},
+  publisher    = {{IEEE}},
+  year         = {2023},
+  url          = {https://doi.org/10.1109/ICDE55515.2023.00046},
+  doi          = {10.1109/ICDE55515.2023.00046},
+  timestamp    = {Wed, 04 Sep 2024 08:13:03 +0200},
+  biburl       = {https://dblp.org/rec/conf/icde/FangQL0XZ023.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{DBLP:journals/ijis/QinZFLW22,
+  author       = {Yanjun Qin and
+                  Fang Zhao and
+                  Yuchen Fang and
+                  Haiyong Luo and
+                  Chenxing Wang},
+  title        = {Memory attention enhanced graph convolution long short-term memory
+                  network for traffic forecasting},
+  journal      = {Int. J. Intell. Syst.},
+  volume       = {37},
+  number       = {9},
+  pages        = {6555--6576},
+  year         = {2022},
+  url          = {https://doi.org/10.1002/int.22855},
+  doi          = {10.1002/INT.22855},
+  timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
+  biburl       = {https://dblp.org/rec/journals/ijis/QinZFLW22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/tits/WangZZLQF22,
+  author       = {Chenxing Wang and
+                  Fang Zhao and
+                  Haichao Zhang and
+                  Haiyong Luo and
+                  Yanjun Qin and
+                  Yuchen Fang},
+  title        = {Fine-Grained Trajectory-Based Travel Time Estimation for Multi-City
+                  Scenarios Based on Deep Meta-Learning},
+  journal      = {{IEEE} Trans. Intell. Transp. Syst.},
+  volume       = {23},
+  number       = {9},
+  pages        = {15716--15728},
+  year         = {2022},
+  url          = {https://doi.org/10.1109/TITS.2022.3145382},
+  doi          = {10.1109/TITS.2022.3145382},
+  timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
+  biburl       = {https://dblp.org/rec/journals/tits/WangZZLQF22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tits/FangZQLW22,
+  author       = {Yuchen Fang and
+                  Fang Zhao and
+                  Yanjun Qin and
+                  Haiyong Luo and
+                  Chenxing Wang},
+  title        = {Learning All Dynamics: Traffic Forecasting via Locality-Aware Spatio-Temporal
+                  Joint Transformer},
+  journal      = {{IEEE} Trans. Intell. Transp. Syst.},
+  volume       = {23},
+  number       = {12},
+  pages        = {23433--23446},
+  year         = {2022},
+  url          = {https://doi.org/10.1109/TITS.2022.3197640},
+  doi          = {10.1109/TITS.2022.3197640},
+  timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
+  biburl       = {https://dblp.org/rec/journals/tits/FangZQLW22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sigir/QinFL0022,
+  author       = {Yanjun Qin and
+                  Yuchen Fang and
+                  Haiyong Luo and
+                  Fang Zhao and
+                  Chenxing Wang},
+  editor       = {Enrique Amig{\'{o}} and
+                  Pablo Castells and
+                  Julio Gonzalo and
+                  Ben Carterette and
+                  J. Shane Culpepper and
+                  Gabriella Kazai},
+  title        = {Next Point-of-Interest Recommendation with Auto-Correlation Enhanced
+                  Multi-Modal Transformer Network},
+  booktitle    = {{SIGIR} '22: The 45th International {ACM} {SIGIR} Conference on Research
+                  and Development in Information Retrieval, Madrid, Spain, July 11 -
+                  15, 2022},
+  pages        = {2612--2616},
+  publisher    = {{ACM}},
+  year         = {2022},
+  url          = {https://doi.org/10.1145/3477495.3531905},
+  doi          = {10.1145/3477495.3531905},
+  timestamp    = {Mon, 12 Aug 2024 18:35:46 +0200},
+  biburl       = {https://dblp.org/rec/conf/sigir/QinFL0022.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tits/0001L0Q21,
+  author       = {Chenxing Wang and
+                  Haiyong Luo and
+                  Fang Zhao and
+                  Yanjun Qin},
+  title        = {Combining Residual and {LSTM} Recurrent Networks for Transportation
+                  Mode Detection Using Multimodal Sensors Integrated in Smartphones},
+  journal      = {{IEEE} Trans. Intell. Transp. Syst.},
+  volume       = {22},
+  number       = {9},
+  pages        = {5473--5485},
+  year         = {2021},
+  url          = {https://doi.org/10.1109/TITS.2020.2987598},
+  doi          = {10.1109/TITS.2020.2987598},
+  timestamp    = {Thu, 16 Sep 2021 17:58:13 +0200},
+  biburl       = {https://dblp.org/rec/journals/tits/0001L0Q21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tvt/QinLZWF21,
+  author       = {Yanjun Qin and
+                  Haiyong Luo and
+                  Fang Zhao and
+                  Chenxing Wang and
+                  Yuchen Fang},
+  title        = {{NDGCN:} Network in Network, Dilate Convolution and Graph Convolutional
+                  Networks Based Transportation Mode Recognition},
+  journal      = {{IEEE} Trans. Veh. Technol.},
+  volume       = {70},
+  number       = {3},
+  pages        = {2138--2152},
+  year         = {2021},
+  url          = {https://doi.org/10.1109/TVT.2021.3060761},
+  doi          = {10.1109/TVT.2021.3060761},
+  timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
+  biburl       = {https://dblp.org/rec/journals/tvt/QinLZWF21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+
+
+
+
+
