--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   number={},
   pages={1-15},
   keywords={Location-based social networks;spatio-temporal data mining;transportation mode-aware trajectory recovery},
+  selected=true,
   doi={10.1109/TMC.2024.3501280}}
 
 
