--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,8 @@
   doi          = {10.1109/JIOT.2024.3380746},
   timestamp    = {Mon, 16 Sep 2024 19:30:57 +0200},
   biburl       = {https://dblp.org/rec/journals/iotj/QinTFLZW24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/iotj/LuoCZLWYLM24,
@@ -55,7 +56,8 @@
   doi          = {10.1109/JIOT.2024.3391915},
   timestamp    = {Fri, 02 Aug 2024 21:40:18 +0200},
   biburl       = {https://dblp.org/rec/journals/iotj/LuoCZLWYLM24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/tits/ZhangZWLXF24,
@@ -75,7 +77,8 @@
   doi          = {10.1109/TITS.2024.3374325},
   timestamp    = {Thu, 22 Aug 2024 20:23:58 +0200},
   biburl       = {https://dblp.org/rec/journals/tits/ZhangZWLXF24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @inproceedings{DBLP:conf/cikm/000124,
@@ -94,7 +97,8 @@
   doi          = {10.1145/3627673.3680261},
   timestamp    = {Thu, 14 Nov 2024 13:43:22 +0100},
   biburl       = {https://dblp.org/rec/conf/cikm/000124.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @inproceedings{DBLP:conf/icann/WangZLFZX24,
@@ -121,7 +125,8 @@
   doi          = {10.1007/978-3-031-72356-8\_17},
   timestamp    = {Sun, 29 Sep 2024 21:17:22 +0200},
   biburl       = {https://dblp.org/rec/conf/icann/WangZLFZX24.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/isci/QinL0FT023,
@@ -140,7 +145,8 @@
   doi          = {10.1016/J.INS.2023.03.063},
   timestamp    = {Mon, 16 Sep 2024 19:30:55 +0200},
   biburl       = {https://dblp.org/rec/journals/isci/QinL0FT023.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @inproceedings{DBLP:conf/cniot/Wang0L023,
@@ -160,7 +166,8 @@
   doi          = {10.1145/3603781.3603808},
   timestamp    = {Sat, 05 Aug 2023 00:01:51 +0200},
   biburl       = {https://dblp.org/rec/conf/cniot/Wang0L023.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @inproceedings{DBLP:conf/icde/FangQL0XZ023,
@@ -182,7 +189,8 @@
   doi          = {10.1109/ICDE55515.2023.00046},
   timestamp    = {Wed, 04 Sep 2024 08:13:03 +0200},
   biburl       = {https://dblp.org/rec/conf/icde/FangQL0XZ023.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/ijis/QinZFLW22,
@@ -202,7 +210,8 @@
   doi          = {10.1002/INT.22855},
   timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
   biburl       = {https://dblp.org/rec/journals/ijis/QinZFLW22.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/tits/WangZZLQF22,
@@ -223,7 +232,8 @@
   doi          = {10.1109/TITS.2022.3145382},
   timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
   biburl       = {https://dblp.org/rec/journals/tits/WangZZLQF22.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/tits/FangZQLW22,
@@ -243,7 +253,8 @@
   doi          = {10.1109/TITS.2022.3197640},
   timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
   biburl       = {https://dblp.org/rec/journals/tits/FangZQLW22.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @inproceedings{DBLP:conf/sigir/QinFL0022,
@@ -270,7 +281,8 @@
   doi          = {10.1145/3477495.3531905},
   timestamp    = {Mon, 12 Aug 2024 18:35:46 +0200},
   biburl       = {https://dblp.org/rec/conf/sigir/QinFL0022.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/tits/0001L0Q21,
@@ -289,7 +301,8 @@
   doi          = {10.1109/TITS.2020.2987598},
   timestamp    = {Thu, 16 Sep 2021 17:58:13 +0200},
   biburl       = {https://dblp.org/rec/journals/tits/0001L0Q21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 @article{DBLP:journals/tvt/QinLZWF21,
@@ -309,7 +322,8 @@
   doi          = {10.1109/TVT.2021.3060761},
   timestamp    = {Mon, 12 Aug 2024 18:35:47 +0200},
   biburl       = {https://dblp.org/rec/journals/tvt/QinLZWF21.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected=true
 }
 
 
