--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@ARTICLE{10879329,
+  author={Wang, Chenxing and Zhao, Fang and Luo, Haiyong and Sun, Poly Z. H. and Fang, Yuchen},
+  journal={IEEE Transactions on Intelligent Transportation Systems}, 
+  title={Cross-Transportation-Mode Knowledge Transfer for Trajectory Recovery With Meta Learning}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-16},
+  keywords={Trajectory;Transportation;Roads;Metalearning;Legged locomotion;Knowledge transfer;Transformers;Global Positioning System;Video recording;Predictive models;Transportation mode-aware trajectory recovery;spatial-temporal data mining;knowledge transfer},
+  doi={10.1109/TITS.2025.3537038}}
+
+
 @ARTICLE{10756642,
   author={Wang, Chenxing and Zhao, Fang and Luo, Haiyong and Fang, Yuchen and Zhang, Haichao and Xiong, Haoyu},
   journal={IEEE Transactions on Mobile Computing}, 
