--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   volume={},
   number={},
   pages={1-16},
+  selected=true,
   keywords={Trajectory;Transportation;Roads;Metalearning;Legged locomotion;Knowledge transfer;Transformers;Global Positioning System;Video recording;Predictive models;Transportation mode-aware trajectory recovery;spatial-temporal data mining;knowledge transfer},
   doi={10.1109/TITS.2025.3537038}}
 
